syntax = "proto3";

package health;

option go_package = "github.com/mikej81/mini-grpc/health";

service HealthService {
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
  rpc CheckNonHealth(HealthRequest) returns (HealthResponse);
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}
